# cmake-tuto

./: .gitignore  CMakeLists.txt  artemis-wshp.ignore  cmake_build.py  cmake_build.sh  cmake_build_junior.bat  cmake_build_panwin7.bat
.github/workflows/: build-check-upload.yml
app/: CMakeLists.txt
app/src/: main.c
